--- a/Concrete Strength Assignment.ipynb
+++ b/Concrete Strength Assignment.ipynb
@@ -462,13 +462,7 @@
       "5/5 [==============================] - 0s 18ms/step - loss: 1608.0843 - mean_squared_error: 1608.0843 - val_loss: 1469.9995 - val_mean_squared_error: 1469.9995\n",
       "Epoch 47/100\n",
       "5/5 [==============================] - 0s 17ms/step - loss: 1604.9494 - mean_squared_error: 1604.9494 - val_loss: 1469.9995 - val_mean_squared_error: 1469.9995\n",
-      "Epoch 48/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 48/100\n",
       "5/5 [==============================] - 0s 17ms/step - loss: 1583.8572 - mean_squared_error: 1583.8572 - val_loss: 1469.9995 - val_mean_squared_error: 1469.9995\n",
       "Epoch 49/100\n",
       "5/5 [==============================] - 0s 21ms/step - loss: 1592.3371 - mean_squared_error: 1592.3371 - val_loss: 1469.9995 - val_mean_squared_error: 1469.9995\n",
