--- a/Car Price Prediction assignment.ipynb
+++ b/Car Price Prediction assignment.ipynb
@@ -70,14 +70,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import tensorflow as tf"
+    "import tensorflow as tf\n",
+    "import tensorflow as tf\n",
+    "from tensorflow.keras import models,layers,optimizers,utils\n",
+    "from tensorflow.keras.utils import to_categorical\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import Dense\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler"
    ]
   },
   {
@@ -307,53 +314,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "car_ID              0\n",
-       "symboling           0\n",
-       "CarName             0\n",
-       "fueltype            0\n",
-       "aspiration          0\n",
-       "doornumber          0\n",
-       "carbody             0\n",
-       "drivewheel          0\n",
-       "enginelocation      0\n",
-       "wheelbase           0\n",
-       "carlength           0\n",
-       "carwidth            0\n",
-       "carheight           0\n",
-       "curbweight          0\n",
-       "enginetype          0\n",
-       "cylindernumber      0\n",
-       "enginesize          0\n",
-       "fuelsystem          0\n",
-       "boreratio           0\n",
-       "stroke              0\n",
-       "compressionratio    0\n",
-       "horsepower          0\n",
-       "peakrpm             0\n",
-       "citympg             0\n",
-       "highwaympg          0\n",
-       "price               0\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 205 entries, 0 to 204\n",
+      "Data columns (total 26 columns):\n",
+      " #   Column            Non-Null Count  Dtype  \n",
+      "---  ------            --------------  -----  \n",
+      " 0   car_ID            205 non-null    int64  \n",
+      " 1   symboling         205 non-null    int64  \n",
+      " 2   CarName           205 non-null    object \n",
+      " 3   fueltype          205 non-null    object \n",
+      " 4   aspiration        205 non-null    object \n",
+      " 5   doornumber        205 non-null    object \n",
+      " 6   carbody           205 non-null    object \n",
+      " 7   drivewheel        205 non-null    object \n",
+      " 8   enginelocation    205 non-null    object \n",
+      " 9   wheelbase         205 non-null    float64\n",
+      " 10  carlength         205 non-null    float64\n",
+      " 11  carwidth          205 non-null    float64\n",
+      " 12  carheight         205 non-null    float64\n",
+      " 13  curbweight        205 non-null    int64  \n",
+      " 14  enginetype        205 non-null    object \n",
+      " 15  cylindernumber    205 non-null    object \n",
+      " 16  enginesize        205 non-null    int64  \n",
+      " 17  fuelsystem        205 non-null    object \n",
+      " 18  boreratio         205 non-null    float64\n",
+      " 19  stroke            205 non-null    float64\n",
+      " 20  compressionratio  205 non-null    float64\n",
+      " 21  horsepower        205 non-null    int64  \n",
+      " 22  peakrpm           205 non-null    int64  \n",
+      " 23  citympg           205 non-null    int64  \n",
+      " 24  highwaympg        205 non-null    int64  \n",
+      " 25  price             205 non-null    float64\n",
+      "dtypes: float64(8), int64(8), object(10)\n",
+      "memory usage: 41.8+ KB\n"
+     ]
     }
    ],
    "source": [
-    "data.isnull().sum()"
+    "data.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -368,13 +378,41 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "data.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data=data.drop([\"car_ID\",\"symboling\",\"CarName\"],axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x=data.drop(\"price\",axis=1).copy()\n",
+    "y=data[\"price\"].copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_train,x_test,y_train,y_test=train_test_split(x,y,train_size=0.7,random_state=123)"
    ]
   },
   {
